Fix tree inlining because I'm really dumb.